--- a/pages/p2/951780.md
+++ b/pages/p2/951780.md
@@ -1,4 +1,4 @@
-### 内蒙古女公务员自杀留遗书 家属疑遭公安封口(图)
+### 马云惹翻了中南海？蚂蚁遭当局追打内幕流出(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="内蒙古 公务员 自杀 封口" src="https://img3.secretchina.com/pic/2020/9-9/p2772241a923734516-ss.jpg" style="height:337px; width:600px"/>
+  <img alt="阿里巴巴创办人、蚂蚁集团实际控制人马云。（图片来源：PHILIPPE LOPEZ/AFP via Getty Images）" src="https://img2.secretchina.com/pic/2019/11-11/p2559831a838713831-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   内蒙古阿拉善盟政府一名蒙古族女公务员苏日娜离奇身亡。（图片来源：南蒙古人权信息中心）
+   阿里巴巴创办人、蚂蚁集团实际控制人马云。（图片来源：PHILIPPE LOPEZ/AFP via Getty Images）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,61 +21,60 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.51.119:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.51.119:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/)  &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html) &nbsp;|&nbsp; [网门免翻墙](http://158.247.203.241:11000/show.aspx?name=ogHome)
-
-#### 💥 [九评共产党](http://141.164.51.119:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.51.119:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.51.119:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.51.119:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  抗争成功典范：2016年湖北仙桃十万人游行示威反垃圾焚烧厂（项目取消，市长下课）](http://141.164.51.119:10000/videos/news/xiantao.html)
-
-#### [ 🔥  年底世界七大趋势｜中共战狼失利，全球反呛｜美中台能开战？川普将连任？](http://141.164.51.119:10000/videos/news/tanghao02.html)
-
-#### [ 🔥  電影《永恆的五十分鐘》片尾曲 - 《找真相》](http://141.164.51.119:10000/videos/news/../legend/index.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年9月9日讯】
-  <span href="https://www.secretchina.com/news/gb/tag/内蒙古" target="_blank">
-   内蒙古
-  </span>
-  教育部门近日要求当地所有学校用汉语取代蒙古语教学，引发民众抗议。有消息传出，内蒙古阿拉善盟政府一名蒙古族女公务员苏日娜4日清晨堕楼身亡，她的家人随后也证实其因“双语教学”离世。当地官方为掩盖实情，要死者家属对外称苏日娜是因抑郁症而死。
+  【看中国2020年11月7日讯】（看中国记者苗薇综合报导）中国金融科技巨头
+  <strong>
+   蚂蚁集团
+  </strong>
+  实际控制人
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/马云" target="_blank">
+    马云
+   </span>
+  </strong>
+  遭约谈后，该集团上市也被叫停，引发市场震惊。日前中共央行官员就此事回应说，这个决定是为了保护消费者和投资人的利益，但此说法引起质疑。新媒引述消息说，马云在金融峰会上要“畅所欲言”，结果激怒中共高层。有分析指，蚂蚁集团上市被叫停，背后不仅涉嫌中共高层
+  <strong>
+   权斗
+  </strong>
+  ，而且涉嫌中共当局金融安全等复杂因素。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  <strong>
-   丈夫被公安要求撤妻子去世信息
-  </strong>
+  据陆媒报导，11月6日，中共央行副行长刘国强在中共国务院举行的政策吹风会上说，暂缓蚂蚁上市是基于维护金融消费者和投资者利益的综合考虑，以及维护资本市场长期稳定发展作出的决定。
  </p>
  <p>
-  <span href="http://www.smhric.org/news_678.htm" target="_blank">
-   南蒙古人权信息中心
+  他还指，10月下旬召开的上海金融峰会上提出，金融科技与金融创新快速发展，
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
   </span>
-  （Southern Mongolian Human Rights Information Center）表示，当地警方9月4日证实有一名苏某某 33 岁女子堕楼身亡。苏日娜丈夫阿拉腾巴格那在微信表示，她的妻子带着痛苦和悲伤结束了她的生命，“蒙古人，这是新一轮的‘文化大革命’”。苏日娜的大嫂也在微信指，苏日娜在死前向母亲及丈夫留下遗言，“我因为‘双语教学’要向你说再见”。
+  必须处理好发展与稳定的关系，既要鼓励创新，也要加强监管，将金融活动全面纳入监管，以防范系统风险。不过此说法引起质疑，认为这只是当局打压蚂蚁集团的借口。
  </p>
  <p>
-  南蒙古人权信息中心称，苏日娜是抗议“汉化政策”运动，第4起
-  <span href="https://www.secretchina.com/news/gb/tag/自杀" target="_blank">
-   自杀
+  《联合早报》11月6日引述接近马云的两名消息人士表示，马云在上海金融峰会上发言前，身边知其演说内容的人曾劝他放软语气，因为最高级的官员会出席有关论坛，但他坚持要畅所欲言，结果激怒中共高层，其金融帝国蚂蚁集团的上市也告流产。
+ </p>
+ <p>
+  两名消息人士称，多名高级金融监管官员对马云的演讲感到愤怒，甚至感到“被一拳打脸”。这番演讲也促使金融监管官员要求对蚂蚁业务进行全面审查，做出书面指示的包括
+  <span href="https://www.secretchina.com/news/gb/tag/习近平" target="_blank">
+   习近平
   </span>
-  死亡事件。
+  信任的经济顾问刘鹤。
  </p>
  <p>
-  据
-  <span href="https://www.rfa.org/cantonese/news/plunge-09042020065826.html?encoding=simplified" target="_blank">
-   自由亚洲电台
+  《美国之音》报导说，海外的一些有影响的财经评论人士认为，马云这次受打压，主要原因是他直接触犯了习近平的尊严。
+  <span href="https://www.secretchina.com/news/gb/tag/王岐山" target="_blank">
+   王岐山
   </span>
-  报导，苏日娜死因曝光后，海内外蒙古人和民间留言纪念苏日娜。但阿拉善左旗公安局4日发《警情通报》，指苏日娜有抑郁症病史、曾割过腕，并警告网民不得发布“不实信息”。
- </p>
- <p>
-  旅居美国的蒙古族人诺民（Nomin）引述阿拉腾巴格那在微信的录音指，苏日娜是因为压力大跳楼，但医院要求他对外声称妻子是抑郁症自杀。
+  在上海金融峰会上的讲话表达的是习近平的看法，马云直接否定中国存在系统性金融风险，就等于不跟中央保持一致。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -90,7 +89,7 @@
   </div>
  </center>
  <p>
-  也有网传录音显示，阿拉腾巴格那遭公安警告，要求他撤下网上有关妻子身亡的文字和图片信息。
+  中国政经问题分析人士秦鹏7日对《大纪元》表示，蚂蚁集团表面看来是因所谓的金融监管这样一种冲突，“其实大家都很清楚，根本原因是因为之前马云在金融论坛上发表一个讲话，这个话是得罪了中共最高党魁习近平。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -105,7 +104,7 @@
   </div>
  </center>
  <p>
-  网传苏日娜的遗书显示，“我们阿拉善盟的人口少，没法团结起来，我们写的请愿书连旗政府都没过就给压下去了。他们用各种办法施加压力。我们蒙语文工作人员的压力更大。我们就算傻，我们就算懦弱，不要再骂我们了。我们用生命去证明了我们努力过。”
+  秦鹏说：“因为整个金融系统性的风险防范，是最近两三年之前由习近平提出来的”，习近平要大权在握，就要掌握金融权力。而中国随着金融业的发展，以及金融创新的聚合和集团的金融化，所谓的金控集团大量的出现，大量的资本可以乘机流向海外，以及像类似安邦集团，短短的几年时间内，可以快速膨胀到几万亿元（人民币）。习要加强金融监管和防止出现这个风险，包括最终威胁到中共当局的政权问题的风险。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -120,9 +119,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   汉化政策引争议 强逼蒙古学生上课
-  </strong>
+  秦鹏认为，习近平不管是为了巩固权力，还是为了中共经济金融乃至集权需要，他都需要控制金融领域。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -137,7 +134,22 @@
   </div>
  </center>
  <p>
-  内蒙古中小学生新学期于9月1日正式开学，但教育厅在新学年推出了“双语教学”，意思是小学的“思想品德课”使用汉语授课；初中的历史、政治课使用汉语授课；另外，新入学小学一年级生的教材也将采用汉语教科书来教授汉文。
+  悉尼科技大学教授、中国问题专家冯崇义则指马云卷入中共高层内斗。他说，蚂蚁集团属于私人银行的一种操作，而银行业是金融大鳄、权贵家族的地盘。如果他没有后台的话，没有政治上保护，他是拿不到这个许可证的。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  10月24日，马云参加2020第二届外滩金融峰会发表演讲，炮轰监管部门，他称中国“缺乏金融系统”的风险，中国金融业“没有成熟的生态体系，没有完全的流动起来”。中国现在“需要的是建设金融的健康系统，而不是金融系统性风险”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -156,7 +168,7 @@
   </ins>
  </center>
  <p>
-  南蒙古人权信息中心在8月31日及9月1日发布影片，有上千学生因此在街头或校内抗议，并发起大规模罢课。
+  马云不点名地批当局对金融业“监管”得太多，监管部门“没有风险，但是整个经济有风险，整个社会变成了有风险”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -171,11 +183,7 @@
   </div>
  </center>
  <p>
-  据
-  <span href="https://www.voacantonese.com/a/a-mongolian-mother-s-wishes-to-preserve-mongolian-culture-and-language-amid-protests-of-bilingual-education-20200902/5569154.html?fbclid=IwAR01m81dbF2QvrMN8X-ljCIkNKk7FMsqQ0GTvPqAqfjEC8SnFjaVr4qY2h4" target="_blank">
-   美国之音
-  </span>
-  报导，大批蒙古族牧民的学生家长担心大规模的抗议会酿成流血事件，选择不让孩子上学，以此表达不满和反抗。但当局则派人逐家逐户强迫蒙古族人送孩子到学校上课，否则没收草场证，即《草牧场使用权证》。
+  马云还说，“习近平主席说的提升执政能力，是指在监管有序的下面保持健康可持续的发展，而不是监管了就没有发展。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -190,7 +198,7 @@
   </div>
  </center>
  <p>
-  另有多位牧民透露，目前内蒙古人前往周边酒店会遭拒绝入住，理由是“不收留蒙古族”。
+  11月2日，马云突然遭到中国四大金融监管机构约谈。次日，上海证券交易所发布关于暂缓蚂蚁集团科创板上市的决定。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -205,7 +213,7 @@
   </div>
  </center>
  <p>
-  为此，蒙古国前总统额勒贝格道尔吉近日发出声明，敦促中共政府尊重蒙古族人保持母语的民族权利，并呼吁全球各地蒙古族人予以声援。
+  蚂蚁集团原计划11月5日在上海（A股）、香港（H股）同步上市，各类金融机构和散户参与热情高涨。据此前估计，蚂蚁集团总市值可能达到惊人的2.1万亿元人民币，一度被称可能创下“史上最大IPO”新纪录。上市前夕，蚂蚁IPO不仅被按下暂停键，还成为最重要监管对象。有网民调侃，蚂蚁再厉害也只不过是中共监管下的小蚂蚁。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -237,7 +245,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -269,13 +277,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/945573.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/945573.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/945573.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/09/945573.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/951780.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/951780.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/951780.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/07/951780.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p1/945573.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p2/951780.md' width='0px' height='0px'/>
