--- a/pages/nf4514/n12532246.md
+++ b/pages/nf4514/n12532246.md
@@ -1,11 +1,11 @@
-### 【大选更新11.7】拜登深夜讲话 未宣布胜选
+### 【大选更新11.7】密歇根出错计票软件 30州用
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
 
 
 
-<div><img alt="【大选更新11.7】密歇根出错计票软件 30州用" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229478814-600x400.jpg"/>
+<div><img alt="【大选更新11.7】威州议长指示审查大选过程" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229478814-600x400.jpg"/>
 <div class="caption">
  2020年11月5日，美国内华达州北拉斯维加斯，克拉克郡（Clark County）选举部工作人员正在进行计票流程。(RONDA CHURCHILL/AFP via Getty Images)
 </div></div><hr/>
@@ -71,7 +71,127 @@
  </strong>
 </h4>
 <h3>
- 密歇根计票错误！川普6千票给了拜登 软件公司：人为错误
+ 四个关键摇摆州进展
+</h3>
+<p>
+ 大选已经过去了四天，在几个决定总统选举结果的关键州，计票工作仍在进行中。
+</p>
+<p>
+ 下面四个关键州——亚利桑那州、乔治亚州、内华达州和宾夕法尼亚州最新进展：
+</p>
+<p>
+ 宾夕法尼亚州
+</p>
+<p>
+ 根据该州网站，全州还有89,282张选票需要计入。这大约占所有邮寄选票的3.39％。
+</p>
+<p>
+ 根据55个县提供给宾夕法尼亚州国务卿的数据，大选日共发出101,421张临时选票。他们正在努力获取有关这方面和来自全部67个县分类选票的数据。
+</p>
+<p>
+ 费城（详见下面的新闻）
+</p>
+<p>
+ 阿勒格尼县（Allegheny County）：选举工们将于美国东部时间上午9点复工。今天的工作将主要集中在错误发行的29,000张选票上。选举委员会需要检查可能受到影响的每张选票。他们需要确定是否投票人交回了原来的错误选票，还是交回了更新的选票，还是两者都交回了。
+</p>
+<p>
+ 可以预期的是，只是少数不正确的选票被交回，但仍需进行验证。该县有望在今天分批发布结果。
+</p>
+<p>
+ 乔治亚州
+</p>
+<p>
+ 全州应该还有大约12,770张临时选票尚未完成。
+</p>
+<p>
+ 根据州务卿上一次报告，到美国东部时间周五下午5点，该州还可能将收到8,400份来自军人和海外的选票。但是目前还不清楚有多少选票被返回。
+</p>
+<p>
+ 富尔顿县（Fulton County）：美东时间凌晨3点左右，该县报告了结果。CNN报导，乔·拜登（Joe Biden）领先幅度增加。
+</p>
+<p>
+ 格温内特县（Gwinnett County）：总共535张缺席邮寄选票需要签名。今天将有3张军人/海外选票被计入。
+</p>
+<p>
+ 亚利桑那
+</p>
+<p>
+ 根据州务卿的说法，全州还剩下17.3万张选票需要计票。
+</p>
+<p>
+ 其中包括47,000张临时选票，这些选票要到周二才能计算在内。
+</p>
+<p>
+ 下一个已知的公布投票结果的时间是美国东部时间今天上午11点和晚上9点。
+</p>
+<p>
+ 亚利桑那
+</p>
+<p>
+ 根据州务卿的说法，全州还剩下17.3万张选票需要计票。
+</p>
+<p>
+ 其中包括47,000张临时选票，这些选票要到周二才能计算在内。
+</p>
+<p>
+ 下一个已知的公布投票结果的时间是美国东部时间今天上午11点和晚上9点。
+</p>
+<p>
+ 内华达州
+</p>
+<p>
+ 州务卿詹妮弗·罗素（Jennifer Russell）告诉美国有线电视新闻网，该州有124,500张未计选票。
+</p>
+<p>
+ 临时选票为60,000张。
+</p>
+<p>
+ 90％的计票工作将在克拉克县（Clark County）进行。
+</p>
+<p>
+ 下一个已知的发布计票结果的时间是美国东部时间今天下午12点和晚上7点。
+</p>
+<h3>
+ 费城选举官员继续计票
+</h3>
+<p>
+ 一名城市官员说，费城的选举工作人员仍在忙着计入最后的20,000至25,000张邮寄投票。
+</p>
+<p>
+ 这些选票是最棘手的，或者是在错误的地方签名，或者是信封条形码扫描错误，意味着它们无法像其它选票那样顺利过关。
+</p>
+<p>
+ 工人们整夜都在准备这些选票，从美国东部时间上午7点开始，他们将进行审查、整理并扫描选票。
+</p>
+<p>
+ 很难预测周六将要完成的工作量，因为这取决于头天夜里准备的数量。答案尚不得而知。
+</p>
+<p>
+ 就临时选票而言，该市有18,000张需要处理，但这将在下周进行。使用这些选票的原因可能是选民来的地方不对，或者没有收到邮寄选票，或者没有将邮寄选票投到将要投票的地方。
+</p>
+<p>
+ 这些最有可能造成延后，因为他们每个人都需要通过其全国选举人统一登记系统进行验证，以确保没有人进行重复投票。
+</p>
+<p>
+ 这些是最消耗时间的，因此要拖到下周才能开始解决。
+</p>
+<h3>
+ CNN：尚未预测总统大选赢家
+</h3>
+<p>
+ 选举日已经过去了四天，CNN尚未预测出总统大选最终花落谁家。
+</p>
+<p>
+ CNN政治总监戴维·查连（David Chalian）解释说，这是CNN预测的工作原理决定的。该媒体有一个专门的由统计分析人员小组，可以帮助确定CNN何时可以预测出选举结果。
+</p>
+<p>
+ “他们所做的就是，每一次从这些州来了投票结果后，他们将其输入他们的模型和公式中，找出令人产生高度信心的一方。”查连解释说，就是说在这种情况下，处于劣势的候选人没有可能翻盘，超过领先的候选人。
+</p>
+<p>
+ 查连补充说，CNN之所以不对乔治亚州、宾夕法尼亚州、内华达州和亚利桑那州等州的竞选结果进行预测，“是因为数学问题以及在做出任何预测之前所要达到的最高置信度”。
+</p>
+<h3>
+ 密歇根出错计票软件 30州用
 </h3>
 <p>
  据《福斯新闻》报导，密歇根州共和党主席劳拉·考克斯（Laura Cox）（Laura Cox）周五（11月6日）在记者会上表示，在该州安特里姆县（Antrim County）发生计票软件错误事件，把共和党的6,000张选票计给了民主党。而且总统与参议员选举都出现计票错误。
