--- a/pages/nsc418/n12532246.md
+++ b/pages/nsc418/n12532246.md
@@ -5,7 +5,7 @@
 
 
 
-<div><img alt="【大选更新11.7】密歇根出错计票软件 30州用" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229478814-600x400.jpg"/>
+<div><img alt="【大选更新11.7】威州议长指示审查大选过程" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229478814-600x400.jpg"/>
 <div class="caption">
  2020年11月5日，美国内华达州北拉斯维加斯，克拉克郡（Clark County）选举部工作人员正在进行计票流程。(RONDA CHURCHILL/AFP via Getty Images)
 </div></div><hr/>
