--- a/pages/soh6/440383.md
+++ b/pages/soh6/440383.md
@@ -115,10 +115,27 @@
   </div>
  </div>
  <h3>
+  共和党全国委员会主席：已收到数百份选举违规报告
+ </h3>
+ <p>
+  共和党全国委员会主席麦克丹尼尔（Ronna McDaniel）发推文说：“我们已经收到数百份有关宾夕法尼亚等州违反选举规定的报告。我们正在追查这些报告，以保护这次选举的诚信。”
+ </p>
+ <div class="soh-embed">
+  <div class="soh-embed-inner">
+   <div class="iframely-embed" style="max-width: 550px;">
+    <div class="iframely-responsive" style="padding-bottom: 100%;">
+    </div>
+   </div>
+  </div>
+ </div>
+ <p>
+  她还谈到，在底特律，当共和党选举监察员被移走时，票点的工作人员欢呼雀跃。“（计票室的）门被上锁，窗户也被挡上了，毫无选举诚信。”
+ </p>
+ <h3>
   威州议长指示委员会审查大选过程
  </h3>
  <p>
-  威斯康星州众议院共和党籍议长沃斯（Robin Vos）指示议会竞选和选举委员会立即审查此次选举的管理问题。沃斯说：“我指示（选举）委员会根据威斯康星州SS 13.31规定的调查权力，立即审查选举是如何管理的。”他还强调，威州公民有权利了解自己的选票是否被合理计算，也应了解即将重新进行的计票中是否有违规行为。
+  威斯康星州众议院共和党籍议长沃斯（Robin Vos）指示议会竞选和选举委员会立即审查此次选举的管理问题。沃斯说：“我指示（选举）委员会根据威斯康星州SS13.31规定的调查权力，立即审查选举是如何管理的。”他还强调，威州公民有权利了解自己的选票是否被合理计算，也应了解即将重新进行的计票中是否有违规行为。
  </p>
  <h3>
   密歇根州出错计票软件在全美30个州被广泛运用
