--- a/pages/nf4514/n12532246.md
+++ b/pages/nf4514/n12532246.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【大选更新11.7】威州议长指示审查大选过程" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229478814-600x400.jpg"/>
+<div><img alt="【大选更新11.7】川普：合法选票决定胜者 非媒体" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/Trump-Biden-1200x684-600x400.jpg"/>
 <div class="caption">
- 2020年11月5日，美国内华达州北拉斯维加斯，克拉克郡（Clark County）选举部工作人员正在进行计票流程。(RONDA CHURCHILL/AFP via Getty Images)
+ 2020年10月30日，唐纳德·川普（特朗普）（Donald Trump，左）总统和民主党总统候选人乔·拜登分别在密歇根州和爱荷华州的竞选活动上讲话。（Mandel Ngan and Jim Watson /AFP via Getty Images）
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
