--- a/pages/prog203/a102981588.md
+++ b/pages/prog203/a102981588.md
@@ -1,4 +1,4 @@
-### 【直播】美国务卿蓬佩奥举行新闻发布会
+### 【直播】左媒宣布拜登当选 美50州集会抗议
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,30 +7,36 @@
 
 <div><div class="featured_image">
  <figure>
-  <img alt="【直播】美国务卿蓬佩奥举行新闻发布会" src="https://i.ntdtv.com/assets/uploads/2020/10/Untitled-20-800x450.jpg"/>
+  <img alt="【直播】左媒宣布拜登当选 美50州集会抗议" src="https://i.ntdtv.com/assets/uploads/2020/11/GettyImages-1229499010-800x450.jpg"/>
  </figure><br/>
  <span class="caption">
-  美国国务卿蓬佩奥（Mike Pompeo）。（PATRICK SEMANSKY/POOL/AFP via Getty Images）
+  凤凰城，亚利桑那州 11月06日：唐纳德·特朗普总统的支持者聚集起来，抗议选举不公。(Courtney Pedroza/Getty Images)
  </span>
 </div>
 </div><hr/>
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 <div><div class="post_content" itemprop="articleBody">
  <p>
-  【新唐人北京时间2020年10月21日讯】周三（21日）上午11:00，美国务卿
-  <ok href="https://www.ntdtv.com/gb/蓬佩奥.htm">
-   蓬佩奥
+  【新唐人北京时间2020年11月08日讯】左右分裂 美国何去何从，舞弊频发
+  <ok href="https://www.ntdtv.com/gb/川普.htm">
+   川普
   </ok>
-  举行新闻发布会。新唐人、大纪元联合对此进行直播（中文同声翻译），并在新唐人电视频道及大纪元、新唐人网络频道播出。
+  团队采取法律行动，
+  <ok href="https://www.ntdtv.com/gb/拜登.htm">
+   拜登
+  </ok>
+  宣布当选 川普将如何应对
  </p>
  <div class="video_fit_container">
  </div>
  <p>
-  网络收看方式：
+  <strong>
+   网络收看方式：
+  </strong>
  </p>
  <p>
   新唐人网站：
@@ -50,13 +56,14 @@
  </p>
  <p>
   【支持】独立媒体-新唐人 为真相护航 为自由发声
-  <ok href="https://www.ntdtv.com/gb/donation.html">
-   https://www.ntdtv.com/gb/donation.html
+  <a class="linkified" href="https://donation.ntdtv.com/" rel="noopener" target="_blank">
+   https://donation.ntdtv.com
   </ok>
-  <br/>
+ </p>
+ <p>
   【支持】为真相护航 为沉默发声，就在今天，支持大纪元
-  <ok href="https://donate.epochtimes.com/" rel="noopener noreferrer" target="_blank">
-   https://donate.epochtimes.com
+  <a class="linkified" href="https://donate.epochtimes.com/" rel="noopener" target="_blank">
+   https://donate.epochtimes.com/
   </ok>
  </p>
  <p>
@@ -67,7 +74,7 @@
   节目》制作组
  </p>
  <p>
-  （责任编辑：李红）
+  （责任编辑：刘明湘）
  </p>
  <div class="single_ad">
  </div>
@@ -75,13 +82,13 @@
 </div>
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog203/a102968344.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog203/a102968344.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog203/a102968344.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.ntdtv.com/gb/2020/10/21/a102968344.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog203/a102981588.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog203/a102981588.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog203/a102981588.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.ntdtv.com/gb/2020/11/07/a102981588.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/prog203/a102968344.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/prog203/a102981588.md' width='0px' height='0px'/>
