--- a/pages/nf4514/n12532246.md
+++ b/pages/nf4514/n12532246.md
@@ -15,7 +15,7 @@
 #### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 <div><p>
- 【大纪元2020年11月07日讯】（大纪元记者陈霆、李言、张婷报导）
+ 【大纪元2020年11月07日讯】（大纪元记者陈霆、李言、张婷、林南报导）
  <ok href="https://www.epochtimes.com/gb/tag/%E7%BE%8E%E5%9B%BD%E5%A4%A7%E9%80%89.html">
   美国大选
  </ok>
@@ -75,16 +75,57 @@
  </strong>
 </h4>
 <h3>
+ 川普发推文：我赢了选举
+</h3>
+<p>
+ 川普于周六下午4:53发推文说：“不允许监票员进入计票中心。我赢了选举，赢得了71,000,000项合法选票。在发生坏事时，不允许我们的监票员去看。 从来没有发生过。数百万张邮寄选票送到那些从未提出要求该选票的人手里！”
+</p>
+<blockquote class="twitter-tweet">
+ <p dir="ltr" lang="en">
+  THE OBSERVERS WERE NOT ALLOWED INTO THE COUNTING ROOMS. I WON THE ELECTION, GOT 71,000,000 LEGAL VOTES. BAD THINGS HAPPENED WHICH OUR OBSERVERS WERE NOT ALLOWED TO SEE. NEVER HAPPENED BEFORE. MILLIONS OF MAIL-IN BALLOTS WERE SENT TO PEOPLE WHO NEVER ASKED FOR THEM!
+ </p>
+ <p>
+  — Donald J. Trump (@realDonaldTrump)
+  <ok href="https://twitter.com/realDonaldTrump/status/1325194709443080192?ref_src=twsrc%5Etfw">
+   November 7, 2020
+  </ok>
+ </p>
+</blockquote>
+<p>
+</p>
+<p>
+ 川普总统早些时候发表声明说，他的法律团队将于周一在法庭上对该结果进行抗辩，并指控拜登“急于假称自己是获胜者”。
+</p>
+<h3>
  拜登自称胜选 50州抗议
 </h3>
 <p>
- 拜登和哈里斯预计将在美国东部时间今晚8点发表讲话。
+ 拜登和哈里斯预计将在美国东部时间今晚8点发表讲话，正式宣布胜选。
+</p>
+<p>
+ 传这一计划是由国会众议院议长佩洛西建议的。
 </p>
 <p>
  目前多家媒体宣布拜登和哈里斯胜选，但一些摇摆州如宾州的州政府官员，并没有宣布川普赢得该州，但这些媒体已将宾州的20张选举人票送给了拜登。
 </p>
 <p>
- 在各州，川普的支持者正聚集在一起抗议计票，这些抗议活动在拜登正式宣布获胜前进行。
+ 在各州，川普的支持者正聚集在一起抗议计票，这些抗议活动在拜登正式宣布获胜前进行。主题是“停止窃取”（Stop the Steal）。民众表示，民主党人、大科技公司和虚假新闻媒体正试图窃取这次选举。不能让这种事情发生，这是美国历史上规模最大的选举欺诈行径。
+</p>
+<p>
+ 在华盛顿纪念碑前，川普支持者举行Stop the Steal集会。
+ <br/>
+</p>
+<p>
+ 川普支持者内华达州选务处前Stop the Steal集会。
+ <br/>
+</p>
+<p>
+ 新泽西Stop the Steal集会
+ <br/>
+</p>
+<p>
+ 亚利桑那州Stop the Steal集会。
+ <br/>
 </p>
 <p>
  截至美东时间下午3点，拜登在其竞选网站上的声明，称“美国人民对我和当选的副总统贺锦丽的信任，使我感到荣幸和谦卑。”，在声明中，他并没有明确提及他是当选的总统。
