--- a/pages/nf4514/n12532246.md
+++ b/pages/nf4514/n12532246.md
@@ -1,4 +1,4 @@
-### 【大选更新11.7】墨西哥总统拒向拜登祝贺
+### 【大选更新11.7】拜登自称胜选 50州抗议
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -75,55 +75,10 @@
  </strong>
 </h4>
 <h3>
- 大主教三发公开信：川普不可击败 好人都要为他祈祷
+ 拜登在集会上致辞 约400辆车观阵
 </h3>
 <p>
- 前梵蒂冈教廷驻美大使、乌尔帕纳区名义大主教卡洛·玛丽亚·维格诺（Carlo Maria Viganò）11月4日在第三封公开信说，川普总统是有史以来最伟大的总统，世界上所有的好人们都要为他祈祷，以击败上帝的敌人。
-</p>
-<p>
- 公开信说，作为虔诚的基督徒和美利坚合众国的忠实公民，您对您挚爱的国家的命运深表关切，而总统选举的最终结果仍不确定。
-</p>
-<p>
- 大主教说，有关选举舞弊的消息越来越多，但主流媒体却为了使他们自己的候选人占到优势而封杀事实真相。在有些州，选票的数量大大多于选民的数量；而邮寄选票则几乎完全是给拜登的。一些州无缘无故地暂停计票，甚至出现改票行为。而这些行为完全是针对川普总统的，是对拜登绝对有利的。
-</p>
-<p>
- 信中说，实际上，几个月以来，我们一直在盯着错综复杂的新闻，包括它们如何操纵或审查信息，如何掩盖突如其来的证据和无可辩驳的证词。这是犯罪行为。
-</p>
-<p>
- 大主教说，我们已经看到，深层政府早已提前武装好自己，以从事历史上最严重的选举欺诈行径，以确保能够击败那个人（川普），因为他坚决反对黑暗之子想要建立的新世界秩序。
-</p>
-<p>
- 公开信说，在这场博弈中，您（川普）没有被击败，就像您的神圣职责一样（不可击败）。您所做的一切都与神站在一起。而其他人则被自己的恶习所蒙蔽和奴役，这源自对我们主的地狱般的仇恨。所以他们选择了与邪恶为伍。
-</p>
-<p>
- 维加诺此前曾两次写信给川普总统。10月25日，美国大选前，维格诺在给川普总统的第二封公开信中说，一场善恶的生死大战正在展开。
-</p>
-<h3>
- 墨西哥总统：现在恭喜拜登当选还太早
-</h3>
-<p>
- 墨西哥总统安德烈斯·曼努埃尔·洛佩兹·奥夫拉多尔（Andres Manuel Lopez Obrador）周六（7日）表示，在法律问题得到解决之前，他不会祝贺拜登在美国总统大选中获胜。
-</p>
-<p>
- 墨西哥是美国的主要贸易伙伴，每年的双向贸易额超过6,000亿美元，而与美国的双边关系对墨西哥来说是最重要的。
-</p>
-<p>
- 洛佩兹·奥夫拉多尔在新闻发布会上说：“关于美国大选，我们将等到所有法律问题都解决之后。”
-</p>
-<p>
- “我不能祝贺一位候选人或另一位候选人。我要等到选举过程结束。”洛佩兹·奥夫拉多尔说。
-</p>
-<h3>
- 拜登贺锦丽在集会上致辞 约400辆车观阵
-</h3>
-<p>
- 拜登团队今晚召开集会，发表胜选致辞。福克斯新闻表示，这是一场约400辆汽车参加观阵的集会。
-</p>
-<p>
- 现场也有一些人走出车辆，聚集在停车场，忽略社交距离。
-</p>
-<p>
- 拜登和贺锦丽（Kamala Harris）于美国东部时间8:40PM左右先后上台发表演讲。
+ 乔·拜登晚8点召开集会，观众是坐在约400辆汽车里的人。拜登（Biden）和哈里斯（Harris）将于美国东部时间8:00PM上台发表演讲。
 </p>
 <h3>
  6个摇摆州未公布赢家 拥78张选举人票
@@ -141,7 +96,7 @@
  乔治亚州表示即将重新计票。
 </p>
 <p>
- 截至周六晚，川普律师团要求威斯康辛州重新计票，并起诉了至少5个州：宾州、内华达州、密西根州、乔治亚州、亚利桑那州。理由是，这些有争议的战场州发生选举欺诈。
+ 川普律师团要求威斯康辛州重新计票，并起诉了四个州：宾州、内华达州、密西根州、乔治亚州。理由是，这些有争议的战场州发生上百起欺诈事件。
 </p>
 <p>
  川普表示，“周一开始，川普竞选团队将开始在法庭上提出起诉，以确保充分遵守选举法并使合法的获胜者得到宝座。”
@@ -151,9 +106,6 @@
 </p>
 <p>
  川普日前表示，如果只是统计合法选票，他将轻松赢得选举。
-</p>
-<p>
- 在费城，川普律师鲁迪·朱利安尼（Rudy Giuliani）周六告诉记者：“媒体无法决定选举。法院会决定。”
 </p>
 <h3>
  联邦众议员：国会正在关注投票系统软件
