--- a/pages/nf4514/n12532246.md
+++ b/pages/nf4514/n12532246.md
@@ -207,7 +207,7 @@
  斯洛维尼亚总理Janez Janša发布推文, 拒绝承认拜登胜选!
 </p>
 <p>
- “很有趣! 选举诉讼已在美国各州提出，法院甚至还没有开始判决呢。美国主流媒体(非官方机构)却开始宣布胜选者, 法治，就这样(笑）”Janša说。
+ “很有趣! 选举诉讼已在美国各州提出，法院甚至还没有开始判决呢。美国主流媒体（非官方机构）却开始宣布胜选者, 法治，就这样（笑）”Janša说。
  <br/>
  <ok href="https://i.epochtimes.com/assets/uploads/2020/11/Screen-Shot-2020-11-07-at-5.43.28-PM.png">
   <img alt="" class="aligncenter size-large wp-image-12533051" src="https://i.epochtimes.com/assets/uploads/2020/11/Screen-Shot-2020-11-07-at-5.43.28-PM-600x386.png"/>
@@ -601,10 +601,10 @@
     查连补充说，CNN之所以不对乔治亚州、宾夕法尼亚州、内华达州和亚利桑那州等州的竞选结果进行预测，“是因为数学问题以及在做出任何预测之前所要达到的最高置信度”。
    </p>
    <h3>
-    密歇根出错计票软件 30州用
+    密歇根计票软件出错  投给川普的票被算给拜登 30州用此软件
    </h3>
    <p>
-    据《福斯新闻》报导，密歇根州共和党主席劳拉·考克斯（Laura Cox）（Laura Cox）周五（11月6日）在记者会上表示，在该州安特里姆县（Antrim County）发生计票软件错误事件，把共和党的6,000张选票计给了民主党。而且总统与参议员选举都出现计票错误。
+    据《福斯新闻》报导，密歇根州共和党主席劳拉·考克斯（Laura Cox）（Laura Cox）周五（11月6日）在记者会上表示，该州安特里姆县（Antrim County）的计票软件发生故障，导致该县6000张投给川普的选票被算到拜登名下。而且总统与参议员选举都出现计票错误。
    </p>
    <p>
     考克斯指出，密歇根州共83个县，有47个县使用同一软件——Dominion。他敦促这些地区检查是否出现同样错误。
