--- a/pages/nsc418/n12533787.md
+++ b/pages/nsc418/n12533787.md
@@ -1,4 +1,4 @@
-### 【大选更新11.8】川普周一全面诉诸法律
+### 【大选更新11.8】川普:周一大规模诉讼
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -34,9 +34,7 @@
  与此同时，周六全美50州同步举行“停止窃选”示威活动，抗议拜登阵营作弊。多名共和党参众议员表示，媒体无法确定谁是总统，选民才可决定，战斗没有结束，美近40国会议员致函司法部长巴尔要求调查选举欺诈，斯洛维尼亚总理、墨西哥总统都表示，在法律问题得到解决之前，不能承认拜登获胜。
 </p>
 <p>
- 11月6日，英文大纪元发表郑重声明：除非所有结果都得到证明，以及任何法律挑战都得到解决，在此之前，大纪元不会宣布谁是2020年总统大选的获胜者。
- <br/>
- “请支持无偏见的独立媒体，因为获取真相实属不易，现在比以往任何时候更甚。”
+ 11月6日，英文大纪元发表郑重声明：除非所有结果都得到证明，以及任何法律挑战都得到解决，在此之前，大纪元不会宣布谁是2020年总统大选的获胜者，“请支持无偏见的独立媒体，因为获取真相实属不易，现在比以往任何时候更甚。”
 </p>
 <h4>
  以下是
