--- a/pages/nf4514/n12533787.md
+++ b/pages/nf4514/n12533787.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【大选更新11.8】川普：周一大规模诉讼" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229515202-600x400.jpg"/>
+<div><img alt="【大选更新11.8】川普：这些人是贼" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229422117-600x400.jpg"/>
 <div class="caption">
- 11月7日，拜登被媒体封为2020年总统大选获胜者，川普总统在弗吉尼亚打高尔夫球后重返白宫。 (ANDREW CABALLERO-REYNOLDS/AFP via Getty Images)
+ 周日（11月8日）上午，川普总统发推指责民主党盗窃了选举成果，并称他们为贼。图为2020年11月2日，美国北卡罗来纳州费耶特维尔（Fayetteville），川普在费耶特维尔地区机场举行竞选集会。(BRENDAN SMIALOWSKI/AFP via Getty Images)
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
